--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0-beta.2",
     "express": "^4.16.1",
     "foreman": "^2.0.0",
     "marked": "^0.3.6",
